feat: add ps::Dictionary and Value with basic tests

--- a/parsec/tests/CMakeLists.txt
+++ b/parsec/tests/CMakeLists.txt
@@ -9,7 +9,8 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(catch2)
 
-add_executable(parsec_tests test_parsec.cpp)
+file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp)
+add_executable(parsec_tests ${TEST_SOURCES})
 target_link_libraries(parsec_tests PRIVATE parsec Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
