--- a/parsec/tests/CMakeLists.txt
+++ b/parsec/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp)
 add_executable(parsec_tests ${TEST_SOURCES})
 target_link_libraries(parsec_tests PRIVATE parsec Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
+target_compile_definitions(parsec_tests PRIVATE EXAMPLES_DIR="${CMAKE_SOURCE_DIR}/examples")
 
 include(CTest)
 include(Catch)
