add comments to files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(parsec_tests
   test_parsec.cpp
   test_dictionary.cpp
   test_parse_examples.cpp
+  test_comments.cpp
 )
 target_link_libraries(parsec_tests PRIVATE parsec Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
