--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(parsec_tests
   test_parse_errors.cpp
   test_ron.cpp
   test_cli_parser_selection.cpp
+  test_pretty_print.cpp
 )
 target_link_libraries(parsec_tests PRIVATE parsec_lib Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
