--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(parsec_tests
   test_cli_parser_selection.cpp
   test_pretty_print.cpp
   test_validate.cpp
+  test_validate_cfd.cpp
+  test_validate_phase1.cpp
 )
 target_link_libraries(parsec_tests PRIVATE parsec_lib Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
