--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(parsec_tests
   test_validate.cpp
   test_validate_cfd.cpp
   test_validate_phase1.cpp
+  test_validate_phase2.cpp
 )
 target_link_libraries(parsec_tests PRIVATE parsec_lib Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
