--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(parsec_lib
     src/json_parser.cpp
     src/ron_parser.cpp
     src/validate.cpp
+  src/defaults.cpp
 )
 
 target_compile_options(parsec_lib PRIVATE -Wall -Wextra -Wpedantic)
