Add medium_schema_fail test and enforce 'pattern' in validator

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,8 @@ add_executable(parsec_tests
   test_setdefaults.cpp
   test_initializer.cpp
   test_validate_cfd.cpp
+  test_validate_medium_schema.cpp
+  test_validate_medium_schema_fail.cpp
 )
 target_link_libraries(parsec_tests PRIVATE parsec_lib Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
