--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(parsec LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(PARSEC_BUILD_TESTS "Build parsec unit tests" ON)
+option(PARSEC_BUILD_TESTS "Build parsec unit tests" OFF)
 
 add_subdirectory(src)
 
