--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,11 @@ option(PARSEC_BUILD_CLI "Build parsec CLI tool" ON)
 if (PARSEC_BUILD_CLI)
   add_executable(parsec src/main.cpp)
   target_link_libraries(parsec PRIVATE parsec_lib)
-  target_include_directories(parsec PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+  target_include_directories(parsec_lib
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> 
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>       
+  )
   target_compile_features(parsec PUBLIC cxx_std_17)
   target_compile_options(parsec PRIVATE -Wall -Wextra -Wpedantic)
 endif()
