--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(parsec_tests
   test_json.cpp
   test_ron.cpp
   test_toml.cpp
+  test_ini.cpp
   test_cli_parser_selection.cpp
   test_pretty_print.cpp
   test_setdefaults.cpp
