cli: add --convert toml; implement dump_toml and wire into main.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ target_sources(parsec_lib
     src/parsec.cpp
     src/ron_parser.cpp
     src/toml_parser.cpp
+    src/toml_printer.cpp
     src/ini_parser.cpp
     src/yaml_parser.cpp
     src/yaml_printer.cpp
