--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(parsec_tests
   test_toml.cpp
   test_ini.cpp
   test_cli_parser_selection.cpp
+  test_cli_convert.cpp
   test_pretty_print.cpp
   test_setdefaults.cpp
   test_initializer.cpp
@@ -35,6 +36,7 @@ add_executable(parsec_tests
 target_link_libraries(parsec_tests PRIVATE parsec_lib Catch2::Catch2WithMain)
 target_include_directories(parsec_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
 target_compile_definitions(parsec_tests PRIVATE EXAMPLES_DIR="${CMAKE_SOURCE_DIR}/examples")
+target_compile_definitions(parsec_tests PRIVATE PARSEC_EXE_PATH="$<TARGET_FILE:parsec>")
 
 include(CTest)
 include(Catch)
