--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(parsec_tests
   test_ron.cpp
   test_toml.cpp
   test_ini.cpp
+  test_yaml.cpp
   test_cli_parser_selection.cpp
   test_cli_convert.cpp
   test_pretty_print.cpp
