validation of not and complex properties

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(parsec_tests
   test_ini.cpp
   test_yaml.cpp
     test_validate_unevaluated_properties.cpp
+  test_validate_hs_schema_examples.cpp
   test_cli_parser_selection.cpp
   test_cli_convert.cpp
   test_pretty_print.cpp
