feat(pq): implement PathParser with support for keys, indices, and wildcards
- Add PathParser class to parse slash-separated paths
- Support simple keys with spaces: "server config/port number"
- Support array indices: "users/0/name"
- Support wildcards: "users/*/name"
- Add comprehensive test suite (18 tests, 59 assertions)
- Phase 1 of pq tool development complete (TDD approach)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(parsec_lib
     src/yaml_printer.cpp
     src/ron_printer.cpp
     src/validate.cpp
+    src/pq/path_parser.cpp
 )
 
 ## Compiler warning flags
