test(pq): add bash integration tests for PathParser
- Create pq_test_parser utility to expose PathParser to command line
- Add comprehensive bash test suite (22 tests)
- Validate path parsing from shell scripting perspective
- Test simple paths, array indices, wildcards, and complex real-world paths
- All tests passing with green checkmarks

This validates that Phase 1 PathParser works correctly for the intended
bash scripting use case.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,8 +69,13 @@ if (PARSEC_BUILD_CLI)
   target_compile_options(parsec PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
-if (PARSEC_BUILD_TESTS)
+if (PARSEC_BUILD_TESTING)
   # tests are handled at top-level in test/
+  # Build test utility for bash integration tests
+  add_executable(pq_test_parser src/pq/test_parser_main.cpp)
+  target_link_libraries(pq_test_parser PRIVATE parsec_lib)
+  target_compile_features(pq_test_parser PUBLIC cxx_std_17)
+  target_compile_options(pq_test_parser PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
 # -------------------------------
