feat(pq): implement Navigator for traversing Dictionary with parsed paths
- Add Navigator class to traverse Dictionary using PathTokens
- Support simple key navigation: server/port
- Support array index navigation: users/0/name
- Support wildcard navigation: users/*/email
- Support multiple wildcards: regions/*/cells/*
- Add comprehensive test suite (16 tests, 36 assertions)
- Phase 2 of pq tool development complete (TDD approach)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ target_sources(parsec_lib
     src/ron_printer.cpp
     src/validate.cpp
     src/pq/path_parser.cpp
+    src/pq/navigator.cpp
 )
 
 ## Compiler warning flags
