feat(pq): implement CLI argument parser
- Add CliArgs class to parse command-line arguments
- Support actions: GET, COUNT, HAS, PRINT, HELP
- Support --get/-g for value extraction
- Support --default/-d for fallback values
- Support --count for array length
- Support --has for existence checks
- Support --as-json for JSON output
- Add comprehensive test suite (15 tests, 27 assertions)
- Phase 3 of pq tool development complete (TDD approach)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ target_sources(parsec_lib
     src/validate.cpp
     src/pq/path_parser.cpp
     src/pq/navigator.cpp
+    src/pq/cli_args.cpp
 )
 
 ## Compiler warning flags
