feat(pq): complete integration - working pq command-line tool!
- Create pq_main.cpp integrating all components
- Support all actions: GET, COUNT, HAS, PRINT
- Support all options: --default, --as-json
- Support all formats: JSON, YAML, TOML, RON, INI
- Multi-format auto-detection
- Shell-friendly raw output
- Wildcard support for extracting from arrays
- Phase 5 of pq tool development complete

WORKING EXAMPLES:
  pq file.json --get "mesh adaptation/starting mesh complexity"
  pq users.json --get "users/*/name"
  pq config.yaml --get timeout --default 30
  pq data.json --count items
  pq settings.toml --has debug/enabled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,6 +81,15 @@ if (PARSEC_BUILD_TESTING)
   target_compile_options(pq_test_parser PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
+# Build the pq tool
+option(PARSEC_BUILD_PQ "Build pq command-line tool" ON)
+if (PARSEC_BUILD_PQ)
+  add_executable(pq src/pq/pq_main.cpp)
+  target_link_libraries(pq PRIVATE parsec_lib)
+  target_compile_features(pq PUBLIC cxx_std_17)
+  target_compile_options(pq PRIVATE -Wall -Wextra -Wpedantic)
+endif()
+
 # -------------------------------
 # Install & export parsec targets
 # -------------------------------
